--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,21 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+:root {
+  margin: 0;
+  padding: 0;
+}
+
+html, body, #root {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+* {
+  box-sizing: border-box;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
